<resources>
    <string name="app_name">AndhikaApps</string>
    <string name="lanjut">Lanjut</string>
    <string name="skip">Skip</string>
    <string name="mulai">Mulai</string>
    <string name="btn_add">Add</string>
    <string name="txtview_wallpaper">Wallpaper</string>

    <string name="slide_1_title">About</string>
    <string name="slide_1_desc">Hi! Aplikasi ini akan memberikan informasi mengenai saya.</string>
    <string name="slide_2_title">About me</string>
    <string name="slide_2_desc">Halo! Aplikasi ini akan memberikan informasi mengenai saya.</string>
    <string name="slide_3_title">About Us</string>
    <string name="slide_3_desc">Hola! Aplikasi ini akan memberikan informasi mengenai saya.</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andhika Putra Bagaskara</string>
    <string name="nav_header_subtitle">andhikaputra1301@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_daily">Daily Activity</string>
    <string name="menu_music_video">Music Favourite &amp; Video</string>
    <string name="menu_my_profile">My Profile</string>

    <string name="home_second">Home Second</string>

    <string name="tab_profile">Profile</string>
    <string name="tab_interest">Interest</string>
    <string name="tab_daily_activty">Daily Activity</string>
    <string name="tab_friend_List">Friend List</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_find_me">Find Me</string>
    <string name="tab_About">About Me</string>

    <string name="btn_exit">EXIT</string>

    <string name="myDescription">Saya Lahir di Jakarta,13 Januari 1999</string>
    <string name="txtHobby">saya mempunyai beberapa hobby yaitu :</string>
    <string name="myHobby1">Membaca Komik</string>
    <string name="myHobby2">Menonton Film</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_mv_fragment">Hello Music Video fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
